# Backend-Ai-Powered-Code-Review

./: .gitignore  Dockerfile  RAILWAY-DEPLOYMENT.md  README.md  app.json  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt  start.py
app/: main.py
app/api/auth/: routes.py
app/api/reviews/: schema.py  viewer.py
app/core/: security.py
app/database/: database.py
